Add sim_users_rec function

--- a/CF_memory_based.ipynb
+++ b/CF_memory_based.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 106,
    "id": "f05f21be",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 107,
    "id": "5d7adb54",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 108,
    "id": "6a1c5a8f",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 109,
    "id": "09c2e67f",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
        "[5 rows x 130 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 110,
    "id": "deba2df3",
    "metadata": {},
    "outputs": [
@@ -579,7 +579,7 @@
        "[5 rows x 138 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 111,
    "id": "631ee5e2",
    "metadata": {},
    "outputs": [
@@ -624,7 +624,7 @@
        "Name: Users are similar to U1001, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,11 +667,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "id": "1173c510",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>placeID</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>userID</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>U1055</th>\n",
+       "      <td>135047</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>U1036</th>\n",
+       "      <td>135064</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>U1055</th>\n",
+       "      <td>132572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>U1055</th>\n",
+       "      <td>132754</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>U1054</th>\n",
+       "      <td>132856</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        placeID\n",
+       "userID         \n",
+       "U1055    135047\n",
+       "U1036    135064\n",
+       "U1055    132572\n",
+       "U1055    132754\n",
+       "U1054    132856"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define function to use for recommend some places for specific user ID \n",
+    "\n",
+    "def sim_users_rec(userid: str) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Recommendation table of other users visited places\n",
+    "\n",
+    "    Args:\n",
+    "        userid (str): User ID\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: Recommendation table\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Get similar users ID\n",
+    "    sim_users_id = fetch_sim_users(user_place_data=user_place_df, user_id=userid, k=5).index # index give user ID\n",
+    "    \n",
+    "    # Obtaining all the places visited by similar users\n",
+    "    # Uses (isin) for multi item filtering\n",
+    "    sim_users_rec_df = rating_final[rating_final['userID'].isin(sim_users_id)][['userID', 'placeID']] \n",
+    "    \n",
+    "    # Set User ID as Index\n",
+    "    sim_users_rec_df = sim_users_rec_df.set_index('userID')\n",
+    "    # Drop duplicated place ID for make the dataFrame unique by place ID\n",
+    "    unique_users_rec_df = sim_users_rec_df.drop_duplicates()\n",
+    "    # Return table contain users have been visited, that we can use it for randomly recommend places\n",
+    "    return unique_users_rec_df\n",
+    "\n",
+    "# let's try recommend some places for user 'U1001'\n",
+    "# Randomly select 5 place to recommend\n",
+    "sim_users_rec('U1001').sample(5)   "
+   ]
   }
  ],
  "metadata": {
